Colaboratory를 통해 생성됨

--- a/POS_konlpy.ipynb
+++ b/POS_konlpy.ipynb
@@ -6,7 +6,7 @@
       "name": "POS_konlpy.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMnHCak/md+jtl8nbtbqtQv",
+      "authorship_tag": "ABX9TyPqgJYTowwEZWBhPqOJB+CW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -958,7 +958,7 @@
         "          continue\n",
         "      try:\n",
         "        result = kkma.pos(t)\n",
-        "        5 += ' '.join(select_pos(result, USE_POS)) + ' '\n",
+        "        return_docu += ' '.join(select_pos(result, USE_POS)) + ' '\n",
         "      except :\n",
         "        pass\n",
         "  return return_docu"
