Colaboratory를 통해 생성됨

--- a/POS_konlpy.ipynb
+++ b/POS_konlpy.ipynb
@@ -6,7 +6,7 @@
       "name": "POS_konlpy.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN9l+jpQyYa0pq300ZcueMu",
+      "authorship_tag": "ABX9TyPXulZ2thPstp+s7nOKusgH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -338,13 +338,13 @@
             "_view_name": "ProgressView",
             "style": "IPY_MODEL_9be07a4219c044869c7df613d315e86a",
             "_dom_classes": [],
-            "description": "  5%",
+            "description": " 12%",
             "_model_name": "FloatProgressModel",
             "bar_style": "",
             "max": 1000,
             "_view_module": "@jupyter-widgets/controls",
             "_model_module_version": "1.5.0",
-            "value": 47,
+            "value": 120,
             "_view_count": null,
             "_view_module_version": "1.5.0",
             "orientation": "horizontal",
@@ -366,7 +366,7 @@
             "placeholder": "​",
             "_view_module": "@jupyter-widgets/controls",
             "_model_module_version": "1.5.0",
-            "value": " 46/1000 [01:16&lt;09:56,  1.60it/s]",
+            "value": " 120/1000 [02:35&lt;18:10,  1.24s/it]",
             "_view_count": null,
             "_view_module_version": "1.5.0",
             "description_tooltip": null,
@@ -782,6 +782,7 @@
         "  city = pkl\n",
         "  done = list(map(lambda x : os.path.splitext(x)[0], list(map(lambda x : os.path.basename(x) , glob.glob(os.path.join(SAVE_PATH, '*.pkl'))))))\n",
         "  if city in done :\n",
+        "    clear_output(wait = True)\n",
         "    continue\n",
         "  with open(os.path.join(PKL_PATH, \"{}.pkl\".format(pkl)), 'rb') as f:\n",
         "    bow = pickle.load(f)\n",
